crates/solidity/testing/snapshots/bindings_output/contracts/state_var_override/v2/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
    ╭─[input.sol:10:16]
    │
 10 │     Bar public override foo;
    │                ──────┬─────  
    │                      ╰─────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (7):
- Def: #1 ["IFoo" @ input.sol:1:11] (interface)
- Def: #2 ["foo" @ input.sol:2:14] (function, type: function () returns (uint256, uint256))
- Def: #3 ["Test" @ input.sol:5:10] (contract)
- Def: #4 ["Bar" @ input.sol:6:12] (struct)
- Def: #5 ["x" @ input.sol:7:14] (struct member, type: uint256)
- Def: #6 ["y" @ input.sol:8:14] (struct member, type: uint256)
- Def: #7 ["test" @ input.sol:12:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (5):
- Ref: ["IFoo" @ input.sol:5:18] -> #1
- Ref: ["foo" @ input.sol:13:9] -> #2
- Ref: ["x" @ input.sol:13:13] -> unresolved
- Ref: ["foo" @ input.sol:14:14] -> #2
- Ref: ["foo" @ input.sol:15:14] -> #2

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["Bar" @ input.sol:10:5]

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ interface IFoo {
    │           ──┬─  
    │             ╰─── name: 1
  2 │     function foo() external returns (uint, uint);
    │              ─┬─  
    │               ╰─── name: 2
    │ 
  5 │ contract Test is IFoo {
    │          ──┬─    ──┬─  
    │            ╰─────────── name: 3
    │                    │   
    │                    ╰─── ref: 1
  6 │     struct Bar {
    │            ─┬─  
    │             ╰─── name: 4
  7 │         uint x;
    │              ┬  
    │              ╰── name: 5
  8 │         uint y;
    │              ┬  
    │              ╰── name: 6
    │ 
 10 │     Bar public override foo;
    │     ─┬─  
    │      ╰─── ???
    │ 
 12 │     function test() internal view {
    │              ──┬─  
    │                ╰─── name: 7
 13 │         foo.x;
    │         ─┬─ ┬  
    │          ╰───── ref: 2
    │             │  
    │             ╰── unresolved
 14 │         this.foo;
    │              ─┬─  
    │               ╰─── ref: 2
 15 │         this.foo();
    │              ─┬─  
    │               ╰─── ref: 2
────╯
